# open-ocean-mapper

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.frontend  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  simple_demo.py  test_components.py
.github/workflows/: ci.yml
cli/: open_ocean_mapper.py
data/mock/: README-data.md  mock_mbes_ping.csv  mock_singlebeam.txt  sample_metadata.json
docs/: architecture.md
examples/: run_demo.sh
frontend/: index.html  nginx.conf  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Layout.jsx
frontend/src/pages/: Home.jsx  Jobs.jsx  Map.jsx  Status.jsx  Upload.jsx
src/: __init__.py  main.py
src/adapters/: __init__.py  seabed2030_adapter.py
src/api/: __init__.py
src/api/v1/: ingest.py  status.py
src/pipeline/: __init__.py  anonymize.py  converter.py  overlay.py
src/pipeline/exporters/: __init__.py  bag_exporter.py  geotiff_exporter.py  netcdf_exporter.py
src/pipeline/formats/: __init__.py  lidar.py  mbes.py  sbet.py
src/qc/: __init__.py  model_stub.py  rules.py
src/tests/: __init__.py  test_converter.py  test_qc.py
src/utils/: __init__.py  geo.py  logging.py
